@@ -1,0 +1,3 @@
+#define LIBRARY             "log"
+
+#include "../icmconf"
