@@ -1,3 +1,9 @@
+bobcat (3.??.??)
+
+  * Created Log objects are now active by default.
+
+
+
 bobcat (3.22.01)
 
   * Hurd-i386 architectures do not (completely?) implement the POSIX standard,
